--- a/public/index.html
+++ b/public/index.html
@@ -3,9 +3,10 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>React App</title>
+    <title>Math Magicians</title>
   </head>
   <body>
     <div id="root"></div>
+    
   </body>
 </html>
